humble_ws/log/build_2024-05-31_18-02-21/antworker_moveit_bringup/stderr.log
  File "/home/humble_ws/install/antworker_moveit_bringup/lib/python3.10/site-packages/antworker_moveit_bringup/ee_point_server.py", line 60
    for method in dir(self.scene) if callable(getattr(self.scene, method)):
                                                                          ^
SyntaxError: invalid syntax

